deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iloop-to-model-production
spec:
  selector:
    matchLabels:
      app: iloop-to-model
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: iloop-to-model
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/iloop-to-model:master
        ports:
        - containerPort: 8000
        command: ["gunicorn", "-w", "4", "-b", "0.0.0.0:7000", "-t", "150", "-k", "aiohttp.worker.GunicornWebWorker", "iloop_to_model.app:get_app()"]
        resources:
          requests:
            cpu: "0"
