deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: iloop-to-model-production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - api.dd-decaf.eu
    - api-staging.dd-decaf.eu
    secretName: decaf-tls
  rules:
  - host: api.dd-decaf.eu
    http:
      paths:
      - path: /iloop-to-model
        backend:
          serviceName: iloop-to-model-production
          servicePort: 80
  - host: api-staging.dd-decaf.eu
    http:
      paths:
      - path: /iloop-to-model
        backend:
          serviceName: iloop-to-model-staging
          servicePort: 80
